--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,19 @@
-language: go
+language: c
 sudo: required
-go:
-  - 1.6
+services:
+  - docker
 cache:
   directories:
     - "$HOME/google-cloud-sdk/"
 env:
   - PATH=${HOME}/google-cloud-sdk/bin:${PATH} CLOUDSDK_PYTHON_SITEPACKAGES=1 CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
-  - ./scripts/setup-google-sdk.sh
+  - ./scripts/ci/setup-google-sdk.sh
 install:
   - gcloud config set project project-kel
 before_script:
   - docker pull quay.io/kelproject/bundle-builder
 script:
-  - ./scripts/build.sh
+  - ./scripts/ci/build.sh
 after_success:
-  - ./scripts/deploy.sh
+  - ./scripts/ci/deploy.sh
